# tfla-01-svn

branches/tfla-01-0.2/: tfla-01.pro
branches/tfla-01-0.2/doc/test/: IR_CYFRA.vcd  TEMP1b.vcd  TEMP2.vcd
branches/tfla-01-0.2/doc/user/: stylesheet.dsl
branches/tfla-01-0.2/doc/user/en/: tfla-01.xml
branches/tfla-01-0.2/share/tfla-01/translations/: tfla-01_de.ts  tfla-01_pl_PL.ts
branches/tfla-01-0.2/src/: VCD_symbol.cpp  VCD_symbol.h  VcdReader.cpp  VcdReader.h  aboutdialog.cpp  data.cpp  data.h  datacollector.cpp  datacollector.h  dataplot.cpp  dataplot.h  dataview.cpp  dataview.h  exportdialog.cpp  exportdialog.h  global.h  importdialog.cpp  importdialog.h  io_vcl.cpp  io_vcl.h  main.cpp  parameterbox.cpp  parameterbox.h  settings.cpp  tfla01.cpp  tfla01.h  triggerwidget.cpp  triggerwidget.h
branches/tfla-01-0.2/src/hardware/: parport.cpp  parport.h  parportlist.cpp  parportlist.h  winieee1284.cpp
tags/tfla-01-0.1.0/: ChangeLog  README  tfla-01.spec
tags/tfla-01-0.1.0/doc/schematic/: tfla-01.sch
tags/tfla-01-0.1.0/src/: centralwidget.h  data.cpp  datacollector.cpp  datacollector.h  dataview.cpp  help.cpp  help.h  main.cpp  tferror.h  tfla01.cpp  tfla01.h
tags/tfla-01-0.1.0/src/hardware/: parporterror.h  parportlist.cpp
tags/tfla-01-0.1.0/ts/: de.ts
tags/tfla-01-0.1.0/util/parporttest/read1/: read1.c
tags/tfla-01-0.1.1/: ChangeLog  README  tfla-01.pro  tfla-01.spec
tags/tfla-01-0.1.1/doc/user/: tfla-01.xsl
tags/tfla-01-0.1.1/share/tfla-01/translations/: de.ts
tags/tfla-01-0.1.1/src/: data.cpp  dataplot.cpp  dataplot.h  dataview.h  help.cpp  main.cpp  settings.h  tfla01.cpp  tfla01.h  wheelscrollbar.h
tags/tfla-01-0.1.1/src/hardware/: parport.cpp  parporterror.cpp  parportlist.h
tags/tfla-01-0.1.1/util/parporttest/readcount/: readcount.pro
tags/tfla-01-0.1.3/: tfla-01.pro
tags/tfla-01-0.1.3/src/: aboutdialog.h  centralwidget.cpp  data.cpp  dataview.h  global.h  tfla01.cpp  tfla01.h  triggerwidget.cpp  triggerwidget.h
tags/tfla-01-0.1.3/util/parporttest/read1/: read1.pro
tags/tfla-01-0.1.3/util/parporttest/readcount/: readcount.c
trunk/: CMakeLists.txt  ChangeLog  README  tfla-01.pro  tfla-01.qrc  tfla-01.spec
trunk/cmake/: Findieee1284.cmake
trunk/doc/schematic/: tfla-01.sch
trunk/doc/user/en/: tfla-01.xml
trunk/libieee1284/: CMakeLists.txt
trunk/share/tfla-01/translations/: de.ts
trunk/src/: aboutdialog.cpp  aboutdialog.h  centralwidget.cpp  centralwidget.h  data.cpp  data.h  datacollector.cpp  datacollector.h  dataplot.cpp  dataplot.h  dataview.cpp  dataview.h  exportdialog.cpp  exportdialog.h  global.h  help.cpp  help.h  main.cpp  parameterbox.cpp  parameterbox.h  settings.cpp  settings.h  tferror.h  tfla01.cpp  tfla01.h  triggerwidget.cpp  triggerwidget.h  wheelscrollbar.cpp  wheelscrollbar.h
trunk/src/hardware/: parport.cpp  parport.h  parporterror.cpp  parporterror.h  parportlist.cpp  parportlist.h
